force-app/main/default/objects/Route__c/Route__c.object-meta.xml
<CustomObject>
    <description>Defines daily vehicle assignments and zone coverage for waste collection.</description>
    <label>Route</label>
    <nameField>
        <label>Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>