force-app/main/default/objects/Route__c/fields/Assigned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned_Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>