force-app/main/default/objects/Route__c/fields/Assigned_Zone__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Zone this Route Covers.</description>
    <label>Assigned_Zone</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>