force-app/main/default/objects/Route__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>When the route ends.</description>
    <label>End_Time</label>
    <type>DateTime</type>
</CustomField>