force-app/main/default/objects/Route__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>When the route starts.</description>
    <label>Start_Time</label>
    <type>DateTime</type>
</CustomField>