force-app/main/default/objects/Route__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supervisor responsible for this route.</description>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Routes</relationshipName>
    <type>Lookup</type>
</CustomField>